vlc-extension: Only read scripts from disk
Improve stability and remove error messages by reading scripts only
from disk using lua io read. Removes support for reading scripts from
network sources.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ deploy:
   - launchcontrol_linux_386
   - launchcontrol_linux_arm
   - contrib/kodi/script.service.launchcontrol.zip
+  - contrib/vlc/launchcontrol.lua
   on:
     tags: true
     repo: funjack/launchcontrol
